2005-01-25  H.J. Lu  <hongjiu.lu@intel.com>

	* dlfcn/dlfcn.c (init): Put it in .init_array section.

2005-02-10  Roland McGrath  <roland@redhat.com>

	[BZ #632]
	* scripts/soversions.awk: Expect cpu, vendor, os as separate variables
	from command line.
	Grok shlib-versions lines with WORDSIZE* in second column.
	Add new leading column to output, DEFAULT for existing output lines.
	Also emit lines with WORDSIZE* for alternate configurations.
	* Makeconfig ($(common-objpfx)soversions.i): Pass those variables.
	($(common-objpfx)soversions.mk): Grok new column, use only DEFAULT.
	($(common-objpfx)gnu/lib-names.stmp): Depend on soversions.i instead
	of soversions.mk; replace inline shell script with use of ...
	* scripts/lib-names.awk: New file.  If input has non-DEFAULT lines,
	emit multiple sets of macros under #if.
	* shlib-versions (x86_64-.*-.*): Add WORDSIZE32 line mapping to i686.
	(s390x-.*-.*): Likewise for s390.
	(powerpc64-.*-.*): Likewise for powerpc.
	(sparc64-.*-.*): Likewise for sparc.

2005-02-08  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Fix a typo.

2005-02-08  Andreas Schwab  <schwab@suse.de>

	* sysdeps/m68k/dl-machine.h (elf_machine_rela): Remove use of
	RESOLVE.

2005-02-07  Richard Henderson  <rth@redhat.com>

	* iconvdata/jis0208.h (struct jisx0208_ucs_idx): Move before use.

2005-02-08  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/dl-machine.h (elf_machine_rela): Remove code using
	RESOLVE.

2005-02-07  Ulrich Drepper  <drepper@redhat.com>

	* elf/dl-load.c (_dl_map_object_from_fd): Makre sure registers are
	set correctly.

2005-01-07  Richard Henderson  <rth@redhat.com>

	* math/math_private.h (__copysign): Define as builtin for gcc 4.
	(__copysignf, __copysignl): Likewise.
	* sysdeps/alpha/fpu/bits/mathinline.h (copysign): Don't define
	for gcc 4.0.
	(copysignf, copysignl, fabsf, fabs): Likewise.
	(__copysign, __copysignf, __copysignl): Remove.
	(__fabs, __fabsf): Remove.
