@@ -32,12 +32,15 @@ x86_64-.*-linux.*       DEFAULT			GLIBC_2.2.5
 powerpc64-.*-linux.*	DEFAULT			GLIBC_2.3
 .*-.*-gnu-gnu.*		DEFAULT			GLIBC_2.2.6
 
-# Configuration		WORDSIZE32		Alternate configuration
+# Configuration		WORDSIZE[32|64]		Alternate configuration
 # -------------		----------		-----------------------
 x86_64-.*-.*		WORDSIZE32		i686-@VENDOR@-@OS@
 s390x-.*-.*		WORDSIZE32		s390-@VENDOR@-@OS@
+s390-.*-.*		WORDSIZE64		s390x-@VENDOR@-@OS@
 powerpc64-.*-.*		WORDSIZE32		powerpc-@VENDOR@-@OS@
+powerpc.*-.*-.*		WORDSIZE64		powerpc64-@VENDOR@-@OS@
 sparc64-.*-.*		WORDSIZE32		sparc-@VENDOR@-@OS@
+sparc.*-.*-.*		WORDSIZE64		sparc64-@VENDOR@-@OS@
 
 # Configuration		Library=version		Earliest symbol set (optional)
 # -------------		---------------		------------------------------
